<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    tools:context=".MainActivity">



<EditText
    android:gravity="center"
    android:id="@+id/MainEnterEmail"
    android:hint="Enter email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

<EditText
    android:gravity="center"
    android:id="@+id/MainEnterPass"
    android:inputType="textPassword"
    android:hint="Enter password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>



<Button
    android:onClick="SignInClick"
    android:text="Sign in"
    android:layout_gravity="center"
    android:id="@+id/MainLoginButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <TextView
        android:gravity="center"
        android:text="If you haven't registered yet, swipe right or click here:"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <Button
        android:layout_gravity="center"
        android:onClick="onClickRegisterPage"
        android:id="@+id/MainRegisterButton"
        android:text="Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <TextView
        android:gravity="center"
        android:text="Or continue as guest"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <Button
        android:layout_gravity="center"
        android:onClick="onClickGuest"
        android:id="@+id/MainGuestButton"
        android:text="Guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>